--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "katex": "^0.11.1",
+    "register-service-worker": "^1.7.1",
     "shuffle-seed": "^1.1.6",
     "vue": "^2.6.11",
     "vue-katex": "^0.4.0"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
     "@vue/cli-plugin-eslint": "^4.4.0",
+    "@vue/cli-plugin-pwa": "^4.5.9",
     "@vue/cli-service": "^4.4.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
