--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "register-service-worker": "^1.7.1",
     "shuffle-seed": "^1.1.6",
     "vue": "^2.6.11",
-    "vue-katex": "^0.4.0"
+    "vue-katex": "^0.4.0",
+    "vue-recaptcha": "^1.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
