--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/cli-plugin-pwa": "^4.5.9",
     "@vue/cli-service": "^4.4.0",
     "babel-eslint": "^10.1.0",
+    "compression-webpack-plugin": "^6.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-pwa-asset-generator": "^1.4.0",
