--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "katex": "^0.11.1",
     "register-service-worker": "^1.7.1",
+    "shuffle-seed": "github:mklilley/shuffle-seed",
     "vue": "^2.6.11",
     "vue-katex": "^0.4.0",
     "vue-recaptcha": "^1.3.0"
