--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "katex": "^0.11.1",
+    "lunr": "^2.3.9",
     "register-service-worker": "^1.7.1",
     "shuffle-seed": "github:mklilley/shuffle-seed",
     "vue": "^2.6.11",
