--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.14",
     "vite": "^4.0.0"
-  }
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
