--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash.debounce": "^4.0.8",
     "lunr": "^2.3.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
