--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "lodash.debounce": "^4.0.8",
     "lunr": "^2.3.9",
+    "mathlive": "^0.92.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "shuffle-seed": "github:mklilley/shuffle-seed"
