--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aimless.js": "^1.0.4",
     "lodash.debounce": "^4.0.8",
     "lunr": "^2.3.9",
     "mathlive": "^0.92.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "shuffle-seed": "github:mklilley/shuffle-seed"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
