--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": ">=18.16.0"
   },
   "scripts": {
+    "host": "vite --host",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -17,7 +18,9 @@
     "lunr": "^2.3.9",
     "mathlive": "^0.101.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
