--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.14",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-pwa": "^0.21.1"
   },
   "browserslist": [
     "defaults"
